--- a/server/manifest.yml
+++ b/server/manifest.yml
@@ -1,11 +1,11 @@
   applications:
   - name: djangoapp
     routes:
-      - route: mybluemix.net
+      - route: us-south.cf.appdomain.cloud
     memory: 128M
     buildpack: python_buildpack
   - name: djangoapp-nginx
     routes:
-      - route: mybluemix.net/static
+      - route: us-south.cf.appdomain.cloud/static
     memory: 128M
     buildpack: staticfile_buildpack
